FEAT: add correct connection to a cluster and other driver